# giza

./: README.md
air/: Cargo.toml
air/src/: lib.rs
cli/: Cargo.toml
cli/src/: utils.rs
cli/src/cmd/: verify.rs
cli/src/cmd/prove/: args.rs  prove.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/field/f252/: mod.rs
examples/: Cargo.toml
examples/src/: main.rs
prover/: Cargo.toml
prover/src/: lib.rs
runner/: Cargo.toml
runner/src/: errors.rs  runner.rs  trace.rs
tests/test1/: Uint256_demo.cairo  params.json  uint256_compiled.json
tests/test2/: generate.cairo  generate_compiled.json  input2.json  params.json
wasm/: Cargo.toml
wasm/src/: lib.rs
