[package]
name = "giza-air"
version = "0.1.0"
edition = "2018"

[dependencies]
winter-air = { path = "../../winterfell/air", default-features = false }
winter-utils = { path = "../../winterfell/utils/core", default-features = false }
giza_core = { package = "giza-core", path = "../core", version = "0.1", default-features = false }
serde = "1.0.137"
