[package]
name = "giza-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
winter-math = { path = "../../winterfell/math", default-features = false }
winter-utils = { path = "../../winterfell/utils/core", default-features = false }
ff = { version = "0.12", features = ["derive"] }
hex = "0.4"

